<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorBlue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sound"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/textViewSound"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundText"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <Switch
        android:text="@string/notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp"
        android:checked="true"
        android:textOn="@string/on"
        android:textOff="@string/off"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="15dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <LinearLayout
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/button_color">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/button_color"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/colorText"/>


            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advertisement"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:paddingTop="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <Switch
        android:text="@string/instant_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_buy"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:textOn="@string/on"
        android:textOff="@string/off"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:clickable="true"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/colorLightGray"
        android:paddingBottom="20dp"/>

</LinearLayout>