<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_title"
        android:textColor="@color/colorBlueText"
        android:padding="18dp"
        android:textSize="18sp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorBlueText"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_message"
        android:textColor="@color/colorText"
        android:padding="18dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"/>

    <LinearLayout
        android:id="@+id/linearAboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonYES"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/yes"
            android:background="@color/colorDarkGray"
            android:onClick="onClickYES"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"/>

        <Button
            android:id="@+id/buttonNO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/no"
            android:background="@color/colorDarkGray"
            android:onClick="onClickNo"/>

    </LinearLayout>

</LinearLayout>