<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.lab_1.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:textColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDarkGray"
        android:id="@+id/content_1"
        android:padding="15dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:paddingRight="15dp"/>

            <EditText
                android:id="@+id/edTextNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_note"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edTextAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_some_notes_here"
            android:textColorHighlight="@color/colorBlue"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDarkGray"
        android:id="@+id/content_2"
        android:padding="15dp"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/some_cool_news_everyone"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_share"/>

                <!--Spinner
                    android:layout_width="26dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner"
                    /-->




            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_my_mind"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDarkGray"
        android:id="@+id/content_3"
        android:padding="15dp"
        android:layout_marginBottom="15dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advertisment_from_haulmont"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want"/>

        <Button
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:background="@color/colorLightGray"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

</LinearLayout>
